--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,7 @@ img {
 .why-us {
     margin-bottom: 3rem;
 }
+
 .why-us .col-left {
     width: 40%;
 }
@@ -129,39 +130,96 @@ img {
  ************************************************/
 
 
- /* Stile per responsive Desktop */
- /* scrittura del codice in modalità "Desktop first", quindi codice adatto a questa grandezza e già pronto */
+/* Stile per responsive Desktop */
+/* scrittura del codice in modalità "Desktop first", quindi codice adatto a questa grandezza e già pronto */
 
- /* Stile per responsive Tablet */
- @media all and (max-width:768px) {
+/* Stile per responsive Tablet */
+@media all and (max-width:768px) {
 
-    .container{
-       max-width: 768px;
-       display: block;
+    .container {
+        max-width: 768px;
+        display: block;
     }
-    
+}
+
+/* Stile per responsive Mobile */
+@media all and (max-width:480px) {
+
+    /* Imposto la larghezza max pari a quella dello schermo */
+    .container {
+        max-width: 480px;
+    }
+
+    /* Prima sezione */
+
+    /* Imposto un flex direction in modo che siano colonne */
+    .row {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    /* Faccio si che la colonna prenda il 100% della larghezza disponible (container) */
+    .lessons .col {
+        width: 100%;
+    }
 
 
 
+    /* Seconda sezione */
+
+    /* Rimuovo il fatto che gli steps si dividessero 1/3 della width */
+    .steps .col {
+        width: 100%;
+    }
+
+    /* Garantisco un padding ai testi per avere l'impaginazione richiesta dei p */
+    p.text {
+        padding: 0 60px;
+    }
+
+    /* Garantisco un margin-bottom per distanziare correttamrnte le card */
+    .card {
+        margin-top: 20px;
+        margin-bottom: 50px;
+    }
 
 
 
- }
+    /* Terza sezione */
 
+    /* Rimuovo il margin per non avere colori diversi e avere uguali distanze */
+    .steps{
+        margin: 0;
+    }
 
+    /* Imposto lo sfondo nero per la sezione */
+    .why-us {
+        margin-bottom: 3rem;
+        background-color: black;
+    }
 
+    /* Nel titolo della terza sezione imposto un padding per ottenere il formato richiesto */
+    h2.text-center {
+        padding: 50px;
+        text-align: center;
+    }
 
+    /* Ritorno un immagine nel terzo blocco con la width raddoppiata rispetto all'originale 40% */
+    .why-us .col-left {
+        width: 80%;
+        margin-bottom: 50px;
+    }
 
+    /* Estendo il testo come desidero per ottenere la pagina richiesta, per farlo ho aumentato del 20% la width della colonna */
+    .why-us .col-right {
+        width: 80%;
+    }
 
+    /* Rimuovo il margine in fondo alla section e lo sostituisco con un padding per ottenere lo stesso colore di background*/
+    section.why-us{
+        padding-bottom: 3rem;
+        margin-bottom: 0;
+    } 
 
-
-
-
-
-
-
-
- /* Stile per responsive Mobile */
- @media all and (max-width:480px) {
-    
- }
+}
